# castle_bot

./: .env.example  .gitignore  README.md  README_MODES.md  diag.sh  diagnose_imports.py  env.example  pyproject.toml  pytest.ini  run.sh
minions/: requirements.yaml
scripts/: improve_cycle.sh
src/castle/: cli.py  config.py  db.py  diagnostics.py  logging.py  market_selection.py  models.py  portfolio.py  reporting.py  run_summary.py  runner.py
src/castle/execution/: kalshi_exec.py  paper.py  training.py
src/castle/improve/: applier.py  claude_resource_discovery.py  logs.py  metrics.py  proposer.py  requirements.py  resource_requests.py  snapshot.py
src/castle/kalshi/: auth.py  client.py
src/castle/llm/: gemini.py  openai_responses.py
src/castle/news/: news_aggregator.py  newsapi.py  rss.py
src/castle/strategy/: autonomous_trader.py  edge_strategy.py  multi_llm_advisor.py  news_signal.py  orderbook_math.py
src/castle_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_diagnostics_and_modes.py  test_modes.py  test_modes_and_diagnostics.py  test_orderbook_math.py  test_strategy_skip_reasons.py
tools/: debug_kalshi_auth.py  verify_api_keys.py
